# em_inference_app

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg  tox.ini
configs/: unet.yaml
notebooks/: em_inference_app_notebook.ipynb
src/em_inference_app/: __init__.py  _em_inference_app.py  settings.py  test_inference.py
src/em_inference_app/_tests/: test_module.py
src/em_inference_app/api/: config.py  inference_api.py  main.py  schemas.py
src/em_inference_app/cli/: inference_cli.py
src/em_inference_app/schemas/: schemas.py
src/em_inference_app/utils/: inference_config.py  inference_utils.py  visualization.py
