[metadata]
name = em_inference_app
version = 0.0.1
description = A repo to apply a trained and frozen U-net for inference of segemntation masks from em images.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/GesaLoof/em_inference_app
author = Gesa Loof
author_email = gesaloof@gmail.com
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/GesaLoof/em_inference_app/issues
    Documentation = https://github.com/GesaLoof/em_inference_app#README.md
    Source Code = https://github.com/GesaLoof/em_inference_app
    User Support = https://github.com/GesaLoof/em_inference_app/issues

[options]
packages = find:
install_requires =
    scipy
    scikit-learn
    scikit-image
    jupyter
    bumpver
python_requires = >=3.8
include_package_data = True
package_dir =
    =src
# add your package requirements here

[options.packages.find]
where = src

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/

[options.package_data]
* = *.yaml
